--- a/package.json
+++ b/package.json
@@ -9,24 +9,23 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "react": "^18",
-    "react-dom": "^18",
-    "next": "14.2.1",
     "@clerk/nextjs": "^5.0.1",
     "@prisma/client": "^5.5.2",
     "@tanstack/react-query": "^5.8.1",
     "@tanstack/react-query-devtools": "^5.8.1",
-    "axios": "^1.6.2",
+    "next": "14.2.1",
     "openai": "^4.14.2",
+    "react": "^18",
+    "react-dom": "^18",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^4.11.0"
   },
   "devDependencies": {
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1",
     "@tailwindcss/typography": "^0.5.10",
     "autoprefixer": "^10.0.1",
     "daisyui": "^3.9.4",
-    "prisma": "^5.5.2"
+    "postcss": "^8",
+    "prisma": "^5.5.2",
+    "tailwindcss": "^3.4.1"
   }
 }
