keep groq to gneerate ai

--- a/package.json
+++ b/package.json
@@ -9,14 +9,17 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@ai-sdk/groq": "^1.0.9",
     "@clerk/nextjs": "^5.0.1",
     "@prisma/client": "^5.5.2",
     "@tanstack/react-query": "^5.8.1",
     "@tanstack/react-query-devtools": "^5.8.1",
+    "ai": "^4.0.25",
     "axios": "^1.6.2",
     "llamaai": "^1.0.4",
     "mongodb": "^6.12.0",
     "next": "14.2.1",
+    "openai": "^4.77.0",
     "react": "^18",
     "react-dom": "^18",
     "react-hot-toast": "^2.4.1",
